feat: add documentation add, update, and delete menu
